# weather-station

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  build.sh  main.cpp  server.cpp  weather_service.py
api/: client.py  server.py  start_station.sh
client/: pyclient.py
database/: database.py  db_schema.sqlite  station_data_sample.db  weather.dbml  weather_station.service
remote/: weather_service.cpp
scripts/: plot_history.py  web_plot.py
server/: main.py
service/: weather_station.service  web_plot.service
src/: CMakeLists.txt  client.cpp  client.hpp  common.hpp  main.cpp  observer.hpp  station.cpp  station.hpp  subject.hpp  weather_service.cpp  weather_service.hpp  wrapper.cpp  wrapper.h
